--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -8,7 +8,7 @@
     }
 }
 @mixin tabletVertical {
-    @media (max-width: 830px) {
+    @media (max-width: 1100px) {
         @content;
     }
 }
