--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,7 +15,7 @@
     }
 }
 @mixin tabletVertical {
-    @media (max-width: 800px) {
+    @media (max-width: 1100px) {
         @content;
     }
 }
